# api/openapi.yaml
@@ -12,13 +12,45 @@ servers:
 - url: https://virtserver.swaggerhub.com/federaciodefogueres/contador-playbacks-api/1.0.0
   description: SwaggerHub API Auto Mocking
 tags:
-- name: settings
+- name: Settings
+  description: Settings available to manage the app
+- name: Sesiones
+  description: Settings available to manage the app
+- name: Asociaciones
   description: Settings available to manage the app
 paths:
+  /sesiones:
+    get:
+      tags:
+      - Sesiones
+      description: Devuelve todas las sesiones con su información.
+      operationId: getAllSessions
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SessionsResponse'
+      x-swagger-router-controller: Sesiones
+  /asociaciones:
+    get:
+      tags:
+      - Asociaciones
+      description: Devuelve todas las asociaciones con su información.
+      operationId: getAllAsociaciones
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AsociacionesResponse'
+      x-swagger-router-controller: Asociaciones
   /mail:
     post:
       tags:
-      - settings
+      - Settings
       summary: send an email
       description: Sends an email from the system
       operationId: sendEmail
@@ -57,6 +89,109 @@ components:
       example:
         message: Example message
         status: "200"
+    AsociacionesResponse:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/Response200'
+        participants:
+          type: array
+          items:
+            $ref: '#/components/schemas/Asociacion'
+      example:
+        status:
+          message: Example message
+          status: "200"
+        participants:
+        - id: 12345678A
+          title: Asociación inventada 1
+          email: asociacion@gmail.com
+        - id: 12345678A
+          title: Asociación inventada 1
+          email: asociacion@gmail.com
+    SessionsResponse:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/Response200'
+        sessions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Session'
+      example:
+        sessions:
+        - session_title: Sesión del día X
+          type_normalized: Eliminatoria
+          id: 12345678A
+          type: 0
+          participants:
+          - id: 12345678A
+            title: Asociación inventada 1
+            email: asociacion@gmail.com
+          - id: 12345678A
+            title: Asociación inventada 1
+            email: asociacion@gmail.com
+        - session_title: Sesión del día X
+          type_normalized: Eliminatoria
+          id: 12345678A
+          type: 0
+          participants:
+          - id: 12345678A
+            title: Asociación inventada 1
+            email: asociacion@gmail.com
+          - id: 12345678A
+            title: Asociación inventada 1
+            email: asociacion@gmail.com
+        status:
+          message: Example message
+          status: "200"
+    Session:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 12345678A
+        session_title:
+          type: string
+          example: Sesión del día X
+        type:
+          type: number
+          example: 0
+        type_normalized:
+          type: string
+          example: Eliminatoria
+        participants:
+          type: array
+          items:
+            $ref: '#/components/schemas/Asociacion'
+      example:
+        session_title: Sesión del día X
+        type_normalized: Eliminatoria
+        id: 12345678A
+        type: 0
+        participants:
+        - id: 12345678A
+          title: Asociación inventada 1
+          email: asociacion@gmail.com
+        - id: 12345678A
+          title: Asociación inventada 1
+          email: asociacion@gmail.com
+    Asociacion:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 12345678A
+        email:
+          type: string
+          example: asociacion@gmail.com
+        title:
+          type: string
+          example: Asociación inventada 1
+      example:
+        id: 12345678A
+        title: Asociación inventada 1
+        email: asociacion@gmail.com
     EmailItem:
       required:
       - content
